<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tmjee.gc</groupId>
    <artifactId>gc</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>gc</name>

    <properties>
        <junit.version>3.8.1</junit.version>
        <exec.version>1.4.0</exec.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>exec</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <executable>java</executable>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.3</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- use +UseParallelGC -->
        <profile>
            <id>parallelgc</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <arguments>
                                <argument>-XX:+UseParallelOldGC</argument>
                                <argument>-Xloggc:parallelgc-gclog.txt</argument>
                                <argument>-XX:+PrintGCDetails</argument>
                                <argument>-XX:+PrintGCDateStamps</argument>
                                <argument>-XX:+PrintTenuringDistribution</argument>
                                <argument>-XX:+PrintGCApplicationConcurrentTime</argument>
                                <argument>-XX:+PrintGCApplicationStoppedTime</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>com.tmjee.gc.SimpleGarbageGenerator</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>


        <!-- use +UseConcMarkSweepGC -->
        <profile>
            <id>cmsgc</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <arguments>
                                <argument>-XX:+UseConcMarkSweepGC</argument>
                                <argument>-Xloggc:cmsgc-gclog.txt</argument>
                                <argument>-XX:+PrintGCDetails</argument>
                                <argument>-XX:+PrintGCDateStamps</argument>
                                <argument>-XX:+PrintTenuringDistribution</argument>
                                <argument>-XX:+PrintGCApplicationConcurrentTime</argument>
                                <argument>-XX:+PrintGCApplicationStoppedTime</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>com.tmjee.gc.SimpleGarbageGenerator</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
